--- a/index.html
+++ b/index.html
@@ -55,15 +55,24 @@
 
     <section id="engine">
         <div class="flexHorizontal">
-            <h1>Aqui está um motor de F1</h1>
-                <p>Carro carro carro carro carro Carro carro</p>
+            <div class="container">
+                <div class="row">
+                <h1>As construtoras</h1>
+                </div>
+                <div class="row">
+                <p>Além de uma competição de pilotos, a Formula 1 é uma competição de engenheiros de primeira linha. Para que um piloto tenha condições de competir, o desempenho da constutora é essencial, desde a construção de um carro potente à equipe de PitStop.</p>
+                </div>
+
+            </div>
             <div class="flexVertical engine">
-                <img src="./images/engine.jpg" width="200">
-                <p class="caption">Engine.</p>
-      
+                <img src="./images/engine.jpg" width="200">      
             </div>
         </div>
     </section>
+
+    <div id ="pista_historia">
+        <img src="images/construtoras.svg" width="1350px">
+    </div>
 
 
     <section id="resto">
