finished timeline, extra page

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <nav>
         <a href="#inicio"><span>Início</span><i class="fa fa-circle"></i></a>
         <a href="#historia"><span>História</span><i class="fa fa-circle"></i></a>
-        <a href="#engine"><span>Engine</span><i class="fa fa-circle"></i></a>
+        <a href="#engine"><span>Construtoras</span><i class="fa fa-circle"></i></a>
         <a href="#resto"><span>Resto da página</span><i class="fa fa-circle"></i></a>
     </nav>
 
@@ -45,10 +45,15 @@
         <div class="tooltip"></div>
 
         <map name="imagem-map">
-            <area shape="rect" coords="0,400,150,600" alt="Área 1" class="tooltip-area" title="1895: Provavelmente a primeira corrida automobilítica, que durou 48h em uma pista de 1200km">
+            <area shape="rect" coords="0,400,150,600" alt="Área 1" class="tooltip-area" title="1895: Provavelmente ano da primeira corrida automobilítica, que durou 48h em uma pista de 1200km">
             <area shape="rect" coords="220,550,370,750" alt="Área 2" class="tooltip-area" title="1901: Primeiro Grand Prix, a competição mais importante da atualidade no automobilismo.">        
             <area shape="rect" coords="330,120,500,300" alt="Área 3" class="tooltip-area" title="1950: Criação oficial da Formula 1 pela FIA (Federação Internacional de Automobilismo). O vencedor da primeira corrida foi o italiano Nino Farina, pela Alfa Romeo.">        
-            <area shape="rect" coords="620,90,770,270" alt="Área 3" class="tooltip-area" title="1972: Um brasileiro é campeão da Fórmula 1 pela primeira vez. Emerson Fittipaldi vence correndo pela Lotus e 2 anos depois pela MacLaren.">        
+            <area shape="rect" coords="620,90,770,270" alt="Área 4" class="tooltip-area" title="1972: Um brasileiro é campeão da Fórmula 1 pela primeira vez. Emerson Fittipaldi vence correndo pela Lotus e 2 anos depois pela MacLaren.">        
+            <area shape="rect" coords="760,520,910,710" alt="Área 5" class="tooltip-area" title="1977: A Renault desenvolve os motores turbo, que potencializavam as velocidades alcançadas mas eventualmente causaram acidentes fatais, então foram proibidos em 1988.">        
+            <area shape="rect" coords="940,350,1090,550" alt="Área 6" class="tooltip-area" title="1994: Morre Ayrton Senna. Sensação brasileira, que conquistou 3 títulos e carregava a esperança do país no esporte. O acidente fatal ocorreu durante uma corrida do GrandPrix, e foi televisionado enquanto o país parava para assistir.">        
+            <area shape="rect" coords="970,20,1130,220" alt="Área 7" class="tooltip-area" title="2023: Atualidade. Nos últimos anos, destacou-se a Mercedes, consagrando 7 vitórias consecutivas entre 2014 e 2020, 6 delas com a direção de Lewis Hamilton, inglês considerado o melhor piloto da atualidade. No ano de 2023, a competição mundial ainda está em andamento, mas tudo aponta que a RedBull desenvolveu um carro com potencial enorme de ser campeão!">        
+
+        
         </map>
     </div>
 
@@ -57,10 +62,12 @@
         <div class="flexHorizontal">
             <div class="container">
                 <div class="row">
-                <h1>As construtoras</h1>
+                    <h1>As construtoras</h1>
                 </div>
                 <div class="row">
-                <p>Além de uma competição de pilotos, a Formula 1 é uma competição de engenheiros de primeira linha. Para que um piloto tenha condições de competir, o desempenho da constutora é essencial, desde a construção de um carro potente à equipe de PitStop.</p>
+                    <p>Além de uma competição de pilotos, a Formula 1 é uma competição de engenheiros de primeira linha. Para que um piloto tenha condições de competir, o desempenho da constutora é essencial, desde a construção de um carro potente à equipe de PitStop.</p>
+
+                    <h3 class="alignright"><a href="curiosidades.html" class="largepill"><em>Curiosidades!</em></a></h3>
                 </div>
 
             </div>
