menu for years working

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                 <div class="row">
                     <p>Além de uma competição de pilotos, a Formula 1 é uma competição de engenheiros de primeira linha. Para que um piloto tenha condições de competir, o desempenho da constutora é essencial, desde a construção de um carro potente à equipe de PitStop.</p>
 
-                    <h3 class="alignright"><a href="curiosidades.html" class="largepill"><em>Curiosidades!</em></a></h3>
+                    <h3 class="alignright"><a href="curiosidades.html" class="largepill"><em>PitStops!</em></a></h3>
                 </div>
 
             </div>
