adjust in violin graph axis, html beautify

--- a/index.html
+++ b/index.html
@@ -33,10 +33,12 @@
     </section>
 
     <section id="historia" style="padding-top: 10vh;">
-        <h1>O passado<br><br></h1>
+        <h1>O passado</h1>
         <div class="flexHorizontal">
-            <img class="old_cars" src="images/old_cars.jpg">
-            <p>"A Fórmula 1 é considerada a categoria mais importante do automobilismo mundial. Por ela, passaram nomes, como: Ayrton Senna, Michael Schumacher, Alain Prost, Nelson Piquet, Juan Manuel Fangio, Niki Lauda, Jackie Stewart, Jack Brabham e tantos outros pilotos de renome. Como em todo esporte a motor, na F1 os resultados dependem da combinação entre piloto e equipamento.</p>
+            <img class="old_cars" src="images/old_cars.png">
+            <p>A Fórmula 1 é considerada a categoria mais importante do automobilismo mundial. Por ela, passaram nomes como Ayrton Senna, Michael Schumacher, Nelson Piquet, Niki Lauda e tantos outros pilotos de renome.
+                <br> <br>
+                 Como em todo esporte a motor, na F1 os resultados dependem da combinação entre piloto e equipamento, e essa relação move há anos uma <em>multidão de fãs.</em></p>
         </div>
     </section>
 
@@ -78,14 +80,12 @@
     </section>
 
     <div id ="pista_historia">
-        <img src="images/construtoras.svg" width="1350px">
+        <img src="images/construtoras.png" width="1350px">
     </div>
 
 
     <section id="resto">
-        <h1 class="alignright">Resto da página, análises</h1>
         <p class="alignright">
-            oiii<br><br><em>letra diferente</em><br>Letra assim<br><br></p>
         <h3 class="alignright"><a href="graficos.html" class="largepill"><em>Outras coisas da página...</em></a></h3>
         <br>
         <h3 class="alignright"><a href="graficos.html" class="smallpill"><em>Outras coisas da página...</em></a></h3>
