--- a/violin.html
+++ b/violin.html
@@ -27,7 +27,7 @@
                 </div>
                 <div class="main-right col-md-10">
                     <br>
-                    <h1>Tempos de PitStop: cada segundo importa</h1>
+                    <h1>Tempos de PitStop: cada <em>segundo</em> importa</h1>
                 </div>
             </div>
 
