Direciona index para barRace

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         <h1 class="alignright">Resto da página, análises</h1>
         <p class="alignright">
             oiii<br><br><em>letra diferente</em><br>Letra assim<br><br></p>
-        <h3 class="alignright"><a href="graficos.html" class="largepill"><em>Outras coisas da página...</em></a></h3>
+        <h3 class="alignright"><a href="barRace.html" class="largepill"><em>Outras coisas da página...</em></a></h3>
         <br>
         <h3 class="alignright"><a href="graficos.html" class="smallpill"><em>Outras coisas da página...</em></a></h3>
     </section>
