Ajeitando Pastas e adicionando carro 3d inicial

--- a/barRace.html
+++ b/barRace.html
@@ -13,8 +13,8 @@
     <script src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3-legend/2.25.6/d3-legend.min.js"></script>
     <!--css-->
-    <link rel="stylesheet" href="css/styles_curiosidades.css">
-    <link rel="stylesheet" href="css/inspector.css">
+    <link rel="stylesheet" href="static/css/styles_curiosidades.css">
+    <link rel="stylesheet" href="static/css/inspector.css">
     <link rel="icon" href="images/icon.png">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@observablehq/inspector@5/dist/inspector.css">
 </head>
