--- a/barRace.html
+++ b/barRace.html
@@ -13,8 +13,7 @@
     <script src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3-legend/2.25.6/d3-legend.min.js"></script>
     <!--css-->
-    <link rel="stylesheet" href="css/styles_curiosidades.css">
-    <link rel="stylesheet" href="css/inspector.css">
+    <link rel="stylesheet" href="css/barRace.css">
     <link rel="icon" href="images/icon.png">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@observablehq/inspector@5/dist/inspector.css">
 </head>
@@ -25,37 +24,40 @@
             <div class="col">
                 <img src="images/title.svg" width="100">
             </div>
-            <div class="main-left col-md-2">
-                <h1>Curiosidades</h1>
-            </div>
         </div>
         
-        <div><h1 style="text-align: center; "> Vitórias acumuladas por construtora </h1></div>
-        <div style="position: relative; top: 60px">
+        <div><h1 style="text-align: center; "> Vitórias acumuladas por construtora (1950-2022) </h1></div>
+        <div style="position: relative; top: 60px" class = "barrace">
             <div style="width: 100%; display: table;">
                 <div style="display: table-row;">
-                    <div style="width: 50%; display: table-cell; ">
+                    <div style="width: 50%; display: table-cell;">
                         <div style="text-align: center; margin-left: 15%; margin-right: 15%; position: relative; top: -65px; color: #999999">
                             <h4> Use o botão de replay para reiniciar a animação do gráfico. </h4>
                         </div>
                         <div style="text-align: center; position: relative; top: -60px" id="observablehq-viewof-replay-94abf4f3"></div>
-                        <div style="position: relative; top: -40px" id="observablehq-chart-94abf4f3"></div>
+                        <div class="d-flex justify-content-center">
+                            <div style="position: relative; top: -40px; width: 75%;" id="observablehq-chart-94abf4f3"></div>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
+    </div> 
 
+    <br>
+
+    <div id ="pista_historia" class = "d-flex justify-content-center">
+        <img src="images/construtoras.png" width="75%">
+    </div>
 
 </body>
 
 
-
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@observablehq/inspector@5/dist/inspector.css">
 <script type="module">
-import {Runtime, Inspector} from "https://cdn.jsdelivr.net/npm/@observablehq/runtime@5/dist/runtime.js";
-import define from "https://api.observablehq.com/d/25abe487081e30d2.js?v=3";
-new Runtime().module(define, name => {
-  if (name === "viewof replay") return new Inspector(document.querySelector("#observablehq-viewof-replay-94abf4f3"));
-  if (name === "chart") return new Inspector(document.querySelector("#observablehq-chart-94abf4f3"));
-});
+    import {Runtime, Inspector} from "https://cdn.jsdelivr.net/npm/@observablehq/runtime@5/dist/runtime.js";
+    import define from "https://api.observablehq.com/d/25abe487081e30d2.js?v=3";
+    new Runtime().module(define, name => {
+    if (name === "viewof replay") return new Inspector(document.querySelector("#observablehq-viewof-replay-94abf4f3"));
+    if (name === "chart") return new Inspector(document.querySelector("#observablehq-chart-94abf4f3"));
+    });
 </script>
