linking back to index, adjustments in html

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     </div>
 
     <section id="inicio">
-        <img id="title" src="images/title.svg">
+        <img id="title" src="images/title.svg" href="index.html">
         <div id="3dcar"></div>
     </section>
 
@@ -87,6 +87,7 @@
                 <div class="row">
                     <p>Além de uma competição de pilotos, a Formula 1 é uma competição de engenheiros de primeira linha. Para que um piloto tenha condições de competir, o desempenho da constutora é essencial, desde a construção de um carro potente à equipe de PitStop.</p>
                     <p>Acumulando pontos ao longo das corridas, as construtoras também competem entre si pelo título de campeã mundial.</p>
+                    <p class="alignleft"></p>
                     <h3 class="alignleft"><a href="barRace.html" class="largepill"><em>Vitórias das construtoras</em></a></h3>
                 </div>
 
@@ -122,7 +123,7 @@
     
     <footer class="flexHorizontal">
         <div>
-            <h1>Projeto Final de Visualização de Dados - FGV</h1>
+            <h2>Projeto Final de Visualização de Dados - FGV</h2>
             <p><em>Ana Carolina Erthal, Felipe Lamarca, Guilherme de Melo</em></p>
         </div>
         <div>
