--- a/violin.html
+++ b/violin.html
@@ -23,7 +23,7 @@
         <div class="container">
             <div class="row">
                 <div class="col">
-                    <img src="images/title.svg" width="100">
+                    <a href="index.html"><img src="images/title.svg" width="100"></a> 
                 </div>
                 <div class="main-right col-md-10">
                     <br>
@@ -118,54 +118,31 @@
                     </div>
                   </div>
 
+                  <div class="dark-article">
+
                   <div class="row">
                     <div class="main-left col-md-6">
-                      <br>
-                      <br>
                       <br>
                       <br>
                       <h1> Recorde Mundial de PitStop</h1>
                       <p> Veja ao lado o recorde mundial em tempo de PitStop absoluto, isto é, a contar do momento em que o piloto para o carro.
                         O recorde é da equipe Red Bull, com 1.82 segundos! Esse tempo provavelmente é menor que o tempo que você levou para ler esse parágrafo.</p>
+                        <br>
                       </p>
+                      <h3 class="alignright"><a href="https://www.youtube.com/embed/wZuYWydGflk" class="largepill"><em>PitStop da primeira F1</em></a></h3>
+                      
                       <img id="car" src="./images/white_car.png" width="400">
+
                     </div>
                     <div class="main-right col-md-6">
                       <br>
                       <br>
-                      <iframe width="560" height="315" src="https://www.youtube.com/embed/wsCriICZ-nA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>                    </div >
+                      <iframe width="500" height="315" src="https://www.youtube.com/embed/wsCriICZ-nA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>                    </div >
                       <br> 
                       <br> 
 
                     </div>
-
-                  <br>
-                  <br>
-                  <br>
-
-                  <img src="./images/historia_pit.png" width="800">
-
-                  <div class="row">
-                    <div class="main-left col-md-6">
-                      <br>
-                      <br>
-                      <iframe width="560" height="315" src="https://www.youtube.com/embed/wZuYWydGflk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
- 
-
-                    </div >
-                    <div class="main-right col-md-6">
-                      <br>
-                      <br>
-                      <br>
-                      <img src="./images/1950pit.svg" width="500"> 
-                      <br> 
-                      <br> 
-
-                    </div>
-
-
                   </div>
-
 
                 </div>
 
