--- a/barRace.html
+++ b/barRace.html
@@ -22,7 +22,7 @@
     <div class="container">
         <div class="row">
             <div class="col">
-                <img src="images/title.svg" width="100">
+                <a href="index.html"><img src="images/title.svg" width="100"></a> 
             </div>
         </div>
         
