Atualização de diretórios e novos HTMLs

--- a/barRaceConstructor.html
+++ b/barRaceConstructor.html
@@ -20,9 +20,16 @@
 
 <body>
     <div class="container">
+        
         <div class="row">
             <div class="col">
                 <img src="images/title.svg" width="100">
+            </div>
+            <div class="col button-container">
+                <h5><a href="barRacePilot.html" class="largepill"><em>Por piloto</em></a></h5>
+            </div>
+            <div class="col button-container">
+                <h5><a href="barRaceRaces.html" class="largepill"><em>Por corrida</em></a></h5>
             </div>
         </div>
         
@@ -36,7 +43,7 @@
                         </div>
                         <div style="text-align: center; position: relative; top: -60px" id="observablehq-viewof-replay-94abf4f3"></div>
                         <div class="d-flex justify-content-center">
-                            <div style="position: relative; top: -40px; width: 75%;" id="observablehq-chart-94abf4f3"></div>
+                            <div style="position: relative; top: -40px; width: 100%;" id="observablehq-chart-94abf4f3"></div>
                         </div>
                     </div>
                 </div>
