--- a/index.html
+++ b/index.html
@@ -87,7 +87,12 @@
                 <div class="row">
                     <p>Além de uma competição de pilotos, a Formula 1 é uma competição de engenheiros de primeira linha. Para que um piloto tenha condições de competir, o desempenho da constutora é essencial, desde a construção de um carro potente à equipe de PitStop.</p>
                     <p>Acumulando pontos ao longo das corridas, as construtoras também competem entre si pelo título de campeã mundial.</p>
-                    <h3 class="alignleft"><a href="barRace.html" class="largepill"><em>Vitórias das construtoras</em></a></h3>
+                    <div>
+                        <h3 style = "font-weight: bold; color:white">Veja o histórico de vitórias</h3> 
+                        <h5 class="alignleft"><a href="barRaceConstructor.html" class="largepill"><em>Por construtora</em></a></h5>
+                        <h5 class="alignleft"><a href="barRacePilot.html" class="largepill"><em>Por piloto</em></a></h5>
+                        <h5 class="alignleft"><a href="barRaceRaces.html" class="largepill"><em>Por corrida</em></a></h5>
+                    </div>
                 </div>
 
             </div>
