Botão de retorno nos outros html

--- a/barRacePilot.html
+++ b/barRacePilot.html
@@ -22,7 +22,7 @@
     <div class="container">
         <div class="row">
             <div class="col">
-                <img src="images/title.svg" width="100">
+                <a href="index.html"><img src="images/title.svg" width="100"></a> 
             </div>
             <div class="col button-container">
                 <h5><a href="barRaceConstructor.html" class="largepill"><em>Por construtora</em></a></h5>
