fixing the fixkkkkkkkkkkk

--- a/barRaceRaces.html
+++ b/barRaceRaces.html
@@ -31,7 +31,7 @@
                     <h5><a href="barRacePilot.html" class="largepill"><em>Por piloto</em></a></h5>
                     </div>
                     <div class="p-2">
-                    <h5><a href="barRaceRaces.html" class="largepill"><em>Por corrida</em></a></h5>
+                    <h5><a href="barRaceConstructor.html" class="largepill"><em>Por construtora</em></a></h5>
                     </div>
                 </div>
             </div>
