--- a/barRaceRaces.html
+++ b/barRaceRaces.html
@@ -25,15 +25,15 @@
                 <a href="index.html"><img src="images/title.svg" width="100"></a> 
             </div>
             <div class="col button-container">
-                <h5><a href="barRaceConstructor.html" class="largepill"><em>Por construtora</em></a></h5>
+                <h5><a href="barRaceConstructor.html" class="largepill"><em>Construtora por temporada</em></a></h5>
             </div>
             <div class="col button-container">
-                <h5><a href="barRacePilot.html" class="largepill"><em>Por piloto</em></a></h5>
+                <h5><a href="barRacePilot.html" class="largepill"><em>Piloto por temporada</em></a></h5>
             </div>
         </div>
         
         
-        <div><h1 style="text-align: center; "> Vitórias em corridas acumuladas por construtoras, por temporada (1950-2022) </h1></div>
+        <div><h1 style="text-align: center; "> Vitórias em corridas acumuladas por construtoras (1950-2022) </h1></div>
         <div style="position: relative; top: 60px" class = "barrace">
             <div style="width: 100%; display: table;">
                 <div style="display: table-row;">
@@ -41,9 +41,9 @@
                         <div style="text-align: center; margin-left: 15%; margin-right: 15%; position: relative; top: -65px; color: #999999">
                             <h4> Use o botão de replay para reiniciar a animação do gráfico. </h4>
                         </div>
-                        <div style="text-align: center; position: relative; top: -60px" id="observablehq-viewof-replay-d2755606"></div>
+                        <div style="text-align: center; position: relative; top: -60px" id="observablehq-viewof-replay-c94d0674"></div>
                         <div class="d-flex justify-content-center">
-                            <div style="position: relative; top: -40px; width: 100%;" id="observablehq-chart-d2755606"></div>
+                            <div style="position: relative; top: -40px; width: 100%;" id="observablehq-chart-c94d0674"></div>
                         </div>
                     </div>
                 </div>
@@ -59,12 +59,12 @@
 
 </body>
 
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@observablehq/inspector@5/dist/inspector.css">
+
 <script type="module">
-import {Runtime, Inspector} from "https://cdn.jsdelivr.net/npm/@observablehq/runtime@5/dist/runtime.js";
-import define from "https://api.observablehq.com/d/da09e876311ba85e@671.js?v=3";
-new Runtime().module(define, name => {
-  if (name === "viewof replay") return new Inspector(document.querySelector("#observablehq-viewof-replay-d2755606"));
-  if (name === "chart") return new Inspector(document.querySelector("#observablehq-chart-d2755606"));
-});
+    import {Runtime, Inspector} from "https://cdn.jsdelivr.net/npm/@observablehq/runtime@5/dist/runtime.js";
+    import define from "https://api.observablehq.com/d/da09e876311ba85e@672.js?v=3";
+    new Runtime().module(define, name => {
+    if (name === "viewof replay") return new Inspector(document.querySelector("#observablehq-viewof-replay-c94d0674"));
+    if (name === "chart") return new Inspector(document.querySelector("#observablehq-chart-c94d0674"));
+    });
 </script>
