--- a/index.html
+++ b/index.html
@@ -89,9 +89,9 @@
                     <p>Acumulando pontos ao longo das corridas, as construtoras também competem entre si pelo título de campeã mundial.</p>
                     <div>
                         <h3 style = "font-weight: bold; color:white">Veja o histórico de vitórias</h3> 
-                        <h5 class="alignleft"><a href="barRaceConstructor.html" class="largepill"><em>Por construtora</em></a></h5>
-                        <h5 class="alignleft"><a href="barRacePilot.html" class="largepill"><em>Por piloto</em></a></h5>
-                        <h5 class="alignleft"><a href="barRaceRaces.html" class="largepill"><em>Por corrida</em></a></h5>
+                        <h5 class="alignleft"><a href="barRaceConstructor.html" class="largepill"><em>Construtora por temporada</em></a></h5>
+                        <h5 class="alignleft"><a href="barRaceRaces.html" class="largepill"><em>Construtora por corrida</em></a></h5>
+                        <h5 class="alignleft"><a href="barRacePilot.html" class="largepill"><em>Piloto por temporada</em></a></h5>
                     </div>
                 </div>
 
