corrections ins files and pills

--- a/barRacePilot.html
+++ b/barRacePilot.html
@@ -28,10 +28,10 @@
             <div class="col alignright button-container">
                 <div class="d-flex flex-row">
                     <div class="p-2">
-                    <h5><a href="barRaceConstructor.html" class="largepill"><em>Construtora por temporada</em></a></h5>
+                    <h5><a href="barRaceConstructor.html" class="largepill"><em>Construtoras</em></a></h5>
                     </div>
                     <div class="p-2">
-                    <h5><a href="barRaceRaces.html" class="largepill"><em>Construtora por corrida</em></a></h5>
+                    <h5><a href="barRaceRaces.html" class="largepill"><em>Corridas por construtora</em></a></h5>
                     </div>
                 </div>
             </div>
