--- a/index.html
+++ b/index.html
@@ -91,13 +91,13 @@
 
                     <div class="d-flex flex-row">
                         <div class="p-2">
-                        <h5 class="alignleft"><a href="barRaceConstructor.html" class="largepill"><em>Construtora por temporada</em></a></h5>
+                        <h5 class="alignleft"><a href="barRaceConstructor.html" class="largepill"><em>Construtoras</em></a></h5>
                         </div>
                         <div class="p-2">
-                        <h5 class="alignleft"><a href="barRaceRaces.html" class="largepill"><em>Construtora por corrida</em></a></h5>
+                        <h5 class="alignleft"><a href="barRaceRaces.html" class="largepill"><em>Corridas por construtora</em></a></h5>
                         </div>
                         <div class="p-2">
-                        <h5 class="alignleft"><a href="barRacePilot.html" class="largepill"><em>Piloto por temporada</em></a></h5>
+                        <h5 class="alignleft"><a href="barRacePilot.html" class="largepill"><em>Pilotos</em></a></h5>
                         </div>
 
                     </div>
@@ -123,7 +123,7 @@
                 <div class="row">
                     <p class="alignright"> O PitStop é um momento decisivo na corrida. As equipes, que no início da F1 consistiam em 4 pessoas (e agora são 25!), são altamente treinadas para realizar as trocas de pneu o mais rápido possível e retornar o piloto à corrida. </p>
                     <p class="alignright"></p>
-                    <h3 class="alignright"><a href="violin.html" class="largepill"><em>PitStops!</em></a></h3>
+                    <h3 class="alignright"><a href="pitStop.html" class="largepill"><em>PitStops!</em></a></h3>
                 </div>
 
             </div>
@@ -137,10 +137,12 @@
         <div>
             <h2>Projeto Final de Visualização de Dados - FGV</h2>
             <p><em>Ana Carolina Erthal, Felipe Lamarca, Guilherme de Melo</em></p>
+            <img src="./images/icon.png" width="70px">
         </div>
         <div>
-            <p style="width: 200px; text-align: right; color: #FFFFFF"> <a class="linkreference" href="https://www.f1-telemetry.net/information">F1 Telemetry</a><br><br>
-            </p>
+            <p style="width: 200px; text-align: right; color: #FFFFFF"> <a class="linkreference" href="https://www.f1-telemetry.net/information">F1 Telemetry</a><br><br></p>
+            <p style="width: 200px; text-align: right; color: #FFFFFF"> <a class="linkreference" href="https://www.kaggle.com/datasets/rohanrao/formula-1-world-championship-1950-2020">Kaggle - Formula 1 World Championship</a><br><br></p>
+
         </div>
     </footer>
     <!--bootstrap-->
