--- a/pitStop.html
+++ b/pitStop.html
@@ -15,7 +15,7 @@
     
 
     <!--css-->
-    <link rel="stylesheet" href="static/css/styles_curiosidades.css">
+    <link rel="stylesheet" href="static/css/pitStop.css">
     <link rel="icon" href="images/icon.png">
 </head>
 
@@ -104,17 +104,17 @@
                 </div>
                 <div>
                   <div class="row">
-                    <div class="main-left col-md-4">
+                    <div class="main-left col-md-5">
                       <img id="middle" src="./images/pit.svg" width="400">  
                     </div >
-                    <div class="main-right col-md-8">
+                    <div class="main-right col-md-7">
                       <br>
                       <br>
-                      <br>
-
                       <p> O PitStop é uma etapa essencial das corridas automobilísticas! É nele que ocorrem as trocas de pneus, reabastecimento dos carros e qualquer manutenção necessária. 
                         Como eles ocorrem durante a corrida, qualquer segundo (ou milissegundo) perdido pode ser decisivo, então as equipes 
                         são altamente treinadas atingir o menor tempo possível.</p>
+                      <p class="alignright"> Nos primórdios da competição, o tempo de um PitStop era em média de 1 minuto!</p>
+                      <h3 class="alignright"><a href="https://www.youtube.com/embed/wZuYWydGflk" class="largepill"><em>PitStop da primeira F1</em></a></h3>
                     </div>
                   </div>
 
@@ -127,16 +127,15 @@
                       <h1> Recorde Mundial de PitStop</h1>
                       <p> Veja ao lado o recorde mundial em tempo de PitStop absoluto, isto é, a contar do momento em que o piloto para o carro.
                         O recorde é da equipe Red Bull, com 1.82 segundos! Esse tempo provavelmente é menor que o tempo que você levou para ler esse parágrafo.</p>
-                      </p>
-                      <h3 class="alignright"><a href="https://www.youtube.com/embed/wZuYWydGflk" class="largepill"><em>PitStop da primeira F1</em></a></h3>
-                      
+                      </p>        
+                      <br>     
+                      <br>
                       <img id="car" src="./images/white_car.png" width="400">
 
                     </div>
                     <div class="main-right col-md-6">
                       <br>
-                      <br>
-                      <iframe width="500" height="315" src="https://www.youtube.com/embed/wsCriICZ-nA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>                    </div >
+                      <iframe width="450" height="315" src="https://www.youtube.com/embed/wsCriICZ-nA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>                    </div >
                       <br> 
                       <br> 
 
