--- a/barRaceConstructor.html
+++ b/barRaceConstructor.html
@@ -29,10 +29,10 @@
             <div class="col alignright button-container">
                 <div class="d-flex flex-row">
                     <div class="p-2">
-                    <h5><a href="barRacePilot.html" class="largepill"><em>Piloto por temporada</em></a></h5>
+                    <h5><a href="barRacePilot.html" class="largepill"><em>Pilotos</em></a></h5>
                     </div>
                     <div class="p-2">
-                    <h5><a href="barRaceRaces.html" class="largepill"><em>Construtora por corrida</em></a></h5>
+                    <h5><a href="barRaceRaces.html" class="largepill"><em>Corridas por construtora</em></a></h5>
                     </div>
                 </div>
             </div>
