--- a/index.html
+++ b/index.html
@@ -39,9 +39,19 @@
     </div>
 
     <section id="inicio">
-        <img id="title" src="images/title.svg" href="index.html">
-        <div id="3dcar"></div>
-    </section>
+
+        <div class="container">
+            <div class="row">
+              <div class="col">
+                <img id="title" src="images/title.svg" href="index.html">
+              </div>
+              <div class="col">
+                <div id="3dcar"></div>
+            </div>
+            </div>
+          </div>
+        
+        </section>
 
     <section id="historia" style="padding-top: 10vh;">
         <h1>O passado</h1>
