--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
             <a href="#historia" class="nav-button" id="h"><i class="fa fa-circle"></i></a>
             <a href="#engine" class="nav-button" id="e"><i class="fa fa-circle"></i></a>
             <a href="#resto" class="nav-button" id="r"><i class="fa fa-circle"></i></a>
+            <a href="#pilotos" class="nav-button" id="f"><i class="fa fa-circle"></i></a>
             <!-- use "images/icon.png" as icon -->
             <img src="images/icon.png" id="LilCar" alt="LilCar">
         </nav>
@@ -128,6 +129,29 @@
                     <h3 class="alignright"><a href="pitStop.html" class="largepill"><em>PitStops!</em></a></h3>
                 </div>
 
+            </div>
+
+        </div>
+    
+    </section>
+
+
+    <section id="pilotos">
+        <div class="flexHorizontal">
+            <div class="container">
+                <div class="row">
+                    <h1 class="alignleft">Os pilotos</h1>
+                </div>
+                <div class="row">
+                    <p class="alignleft"> Os pilotos da Fórmula 1, em geral, se tornam heróis nacionais. Atualmente, a Inglaterra vibra por Lewis Hamilton como, anos atrás, as corridas de Ayrton Senna paravam o Brasil. O esporte exige habilidade e treino em níveis altíssimos!</p>
+                    <p class="alignleft"></p>
+                    <h3 class="alignleft"><a href="pitStop.html" class="largepill"><em>Temporada!</em></a></h3>
+                </div>
+
+            </div>
+
+            <div class="flexVertical pit">
+                <img src="./images/pilotos.png" width="200">      
             </div>
 
         </div>
