--- a/timeSerie.html
+++ b/timeSerie.html
@@ -27,7 +27,7 @@
                 </div>
                 <div class="main-right col-md-10">
                     <br>
-                    <h1>Desempenho individual: colocações na série temporal</h1>
+                    <h1>Desempenho individual: pontos por temporada</h1>
                 </div>
             </div>
 
