--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                 <div class="row">
                     <p class="alignleft"> Os pilotos da Fórmula 1, em geral, se tornam heróis nacionais. Atualmente, a Inglaterra vibra por Lewis Hamilton como, anos atrás, as corridas de Ayrton Senna paravam o Brasil. O esporte exige habilidade e treino em níveis altíssimos!</p>
                     <p class="alignleft"></p>
-                    <h3 class="alignleft"><a href="pitStop.html" class="largepill"><em>Temporada!</em></a></h3>
+                    <h3 class="alignleft"><a href="timeSerie.html" class="largepill"><em>Temporada!</em></a></h3>
                 </div>
 
             </div>
