--- a/timeSerie.html
+++ b/timeSerie.html
@@ -65,8 +65,8 @@
                         <br>
                         <div class="card w-100">
                             <div class="card-body">
-                              <h5 class="card-title">Temporada: <span id="year-value"></span></h5>
-                              <p class="card-text-b">Piloto: <span id="driver-value"></span> </p>
+                              <h5 class="card-title">Temporada: <span id="year-value">2022</span></h5>
+                              <p class="card-text-b">Piloto: <span id="driver-value">Max Verstappen</span> </p>
                               <p class="card-text"></p>
                             </div>
                         </div>
