--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
     <section id="inicio">
 
         <img id="title" src="images/title.svg" href="index.html">
+        <div id="spacing"></div>
         <div id="3dcar"></div>
         
         </section>
