--- a/index.html
+++ b/index.html
@@ -166,9 +166,10 @@
             <p><em>Ana Carolina Erthal, Felipe Lamarca, Guilherme de Melo</em></p>
             <img src="./images/icon.png" width="70px">
         </div>
-        <div>
-            <p style="width: 200px; text-align: right; color: #FFFFFF"> <a class="linkreference" href="https://www.f1-telemetry.net/information">F1 Telemetry</a><br><br></p>
-            <p style="width: 200px; text-align: right; color: #FFFFFF"> <a class="linkreference" href="https://www.kaggle.com/datasets/rohanrao/formula-1-world-championship-1950-2020">Kaggle - Formula 1 World Championship</a><br><br></p>
+        <div>   
+            <p style="width: 300px; text-align: right; color: #FFFFFF"> <a class="linkreference" href="https://www.f1-telemetry.net/information">F1 Telemetry</a><br><br></p>
+            <p style="width: 300px; text-align: right; color: #FFFFFF"> <a class="linkreference" href="https://www.kaggle.com/datasets/rohanrao/formula-1-world-championship-1950-2020">Kaggle - Formula 1 World Championship</a><br><br></p>
+            <h3 class="alignright"><a href="about.html" class="largepill"><em>Sobre o projeto</em></a></h3>
 
         </div>
     </footer>
